# ryeos

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.central-host  Dockerfile.container-attachment-test  Dockerfile.dev  Dockerfile.hosted-node  Dockerfile.hosted-workflow  Dockerfile.release-bundles  Dockerfile.standard  FLAKY-TESTS-2026-05-18.md  LICENSE  README.md  RYE_OS_CONTEXT.md  THREAD_SYSTEM_IMPLEMENTATION_PLAN.md  conftest.py  deny.toml  full_diff.patch  pytest.ini  railway.toml  scene.toml  target
directive-runtime/: Cargo.toml
directive-runtime/src/: adapter.rs  bootstrap.rs  budget.rs  callback_client.rs  continuation.rs  directive.rs  dispatcher.rs  events.rs  harness.rs  main.rs  result_guard.rs  resume.rs  runner.rs  verified_loader.rs
directive-runtime/src/provider_adapter/: tools.rs
graph-runtime/: Cargo.toml
graph-runtime/src/: cache.rs  context.rs  dispatch.rs  edges.rs  foreach.rs  hooks.rs  knowledge.rs  main.rs  model.rs  permissions.rs  persistence.rs  resume.rs  validation.rs  walker.rs
lillux/: Cargo.toml  README.md  pyproject.toml
lillux/kernel/: pyproject.toml
lillux/lillux/: Cargo.toml  pyproject.toml
lillux/proc/: Cargo.toml  pyproject.toml
lillux/src/: cas.rs  main.rs  signature.rs  vault.rs
lillux/watch/: Cargo.toml  pyproject.toml
lilux/: pyproject.toml
lilux/kernel/: pyproject.toml
lilux/proc/: Cargo.toml  pyproject.toml
lilux/watch/: Cargo.toml  pyproject.toml
rye/: pyproject.toml
rye-cli/: Cargo.toml
rye-cli/src/: cmd.rs  exec.rs  main.rs
rye-core/: pyproject.toml
rye-core-tools/: Cargo.toml
rye-core-tools/src/: lib.rs
rye-mcp/: pyproject.toml
rye-mcp/rye_mcp/: __init__.py  bundle_entrypoints.py  server.py
rye-runtime/: Cargo.toml
rye-runtime/src/: callback.rs  callback_client.rs  callback_http.rs  callback_uds.rs  capability_tokens.rs  condition.rs  daemon_rpc.rs  envelope.rs  framing.rs  hooks_eval.rs  hooks_loader.rs  interpolation.rs  lib.rs  paths.rs  transcript.rs  verified_loader.rs
rye-state/: Cargo.toml
rye-state/src/: chain.rs  gc.rs  head_cache.rs  lib.rs  projection.rs  queries.rs  reachability.rs  rebuild.rs  refs.rs  signer.rs  state_db.rs  sync.rs
rye-state/tests/: golden.rs
rye/rye/: bundle_entrypoints.py  constants.py  mcp_connect.py  primary_tool_descriptions.py  server.py
rye_engine/: Cargo.toml
rye_engine/src/: contracts.rs  delegation.rs  dispatch.rs  engine.rs  error.rs  executor_registry.rs  kind_registry.rs  lib.rs  lifecycle.rs  metadata.rs  trust.rs
ryeos/: .gitignore  pyproject.toml
ryeos-app/: Cargo.toml
ryeos-app/src/: callback_token.rs  config.rs  engine_cache.rs  execution_provenance.rs  handler_error.rs  identity.rs  ignore.rs  launch_metadata.rs  lib.rs  runtime_db.rs  service_registry.rs  state.rs  state_store.rs  thread_lifecycle.rs  vault.rs
ryeos-bare/: pyproject.toml  rye
ryeos-cli/: Cargo.toml  pyproject.toml
ryeos-cli/rye_cli/: __init__.py  main.py  output.py
ryeos-cli/src/: arg_bind.rs  dispatcher.rs  error.rs  exit.rs  help.rs  lib.rs  local_verbs.rs  main.rs  project_root.rs  verbs.rs
ryeos-directive-runtime/: Cargo.toml
ryeos-directive-runtime/src/: adapter.rs  bootstrap.rs  budget.rs  continuation.rs  directive.rs  dispatcher.rs  harness.rs  main.rs  parser.rs  resume.rs  runner.rs
ryeos-engine/: Cargo.toml  build.rs
ryeos-engine/examples/: resign_yaml.rs
ryeos-engine/rye_engine/: Cargo.toml
ryeos-engine/src/: binary_resolver.rs  boot_validation.rs  canonical_ref.rs  contracts.rs  delegation.rs  dispatch.rs  engine.rs  error.rs  executor_resolution.rs  inventory.rs  item_resolution.rs  kind_registry.rs  launch_envelope_types.rs  lib.rs  metadata.rs  plan_builder.rs  resolution.rs  roots.rs  runtime_registry.rs  scope.rs  subprocess_spec.rs  test_support.rs  trust.rs
ryeos-engine/tests/: executor_resolution.rs  path_poisoning.rs  resolution_pipeline.rs  runtime_registry.rs
ryeos-executor/: Cargo.toml
ryeos-executor/src/: dispatch.rs  dispatch_error.rs  dispatch_role.rs  executor.rs  lib.rs
ryeos-graph-runtime/: Cargo.toml
ryeos-graph-runtime/src/: cache.rs  context.rs  dispatch.rs  edges.rs  foreach.rs  hooks.rs  knowledge.rs  main.rs  model.rs  permissions.rs  persistence.rs  resume.rs  validation.rs  walker.rs
ryeos-handler-bins/: Cargo.toml
ryeos-handler-bins/src/: extends_chain.rs  graph_permissions.rs  identity.rs  regex_kv.rs  stdio.rs  yaml_header_document.rs
ryeos-knowledge-runtime/: Cargo.toml
ryeos-knowledge-runtime/src/: budget.rs  frontmatter.rs  main.rs
ryeos-mcp/: pyproject.toml
ryeos-mcp/rye_mcp/: __init__.py  server.py
ryeos-node/: Dockerfile  README.md  modal_app.py  pyproject.toml  render.yaml  requirements.txt  run.sh
ryeos-node/ryeos_node/: __init__.py  auth.py  config.py  executions.py  init.py  registry.py  server.py  vault.py  webhooks.py
ryeos-runtime/: Cargo.toml
ryeos-runtime/src/: alias_registry.rs  arg_binder.rs  authorizer.rs  callback.rs  callback_client.rs  callback_contract.rs  callback_uds.rs  capability_tokens.rs  checkpoint.rs  condition.rs  daemon_rpc.rs  envelope.rs  events.rs  hooks_eval.rs  hooks_loader.rs  interpolation.rs  lib.rs  model_resolution.rs  paths.rs  progress.rs  resolver.rs  scalar_or_vec.rs  template.rs  transcript.rs  verb_registry.rs  verified_loader.rs
ryeos-state/: Cargo.toml
ryeos-state/src/: chain.rs  head_cache.rs  ignore.rs  lib.rs  locators.rs  projection.rs  queries.rs  rebuild.rs  refs.rs  sqlite_schema.rs  state_db.rs  sync.rs  verify.rs
ryeos-state/tests/: golden.rs
ryeos-tools/: Cargo.toml
ryeos-tools/examples/: bootstrap_sign_core_kind_schemas.rs  migrate_composer_refs.rs
ryeos-tools/src/: lib.rs  test_support.rs
ryeos-tools/tests/: build_bundle_smoke.rs  state_paths.rs
ryeos-tracing/: Cargo.toml
ryeos-tracing/src/: subscriber.rs  test.rs
ryeos-tracing/tests/: file_sink_survives_restart.rs  file_sink_writes_ndjson.rs
ryeos/rye/: __init__.py  bundle_entrypoints.py  constants.py  directive_parser.py  errors.py  primary_action_descriptions.py  primary_tool_descriptions.py
(+5203 files in other folders)
