[workspace]
members = [
    "crates/kernel/lillux",
    "crates/services/api",
    "crates/core/app",
    "crates/core/bundle",
    "crates/core/node",
    "crates/bin/cli",
    "crates/bin/daemon",
    "crates/services/ui",
    "crates/clients/base",
    "crates/clients/terminal",
    "crates/clients/web",
    "crates/runtimes/directive",
    "crates/core/engine",
    "crates/core/executor",
    "crates/runtimes/graph",
    "crates/tools/handler-bins",
    "crates/core/handler-protocol",
    "crates/runtimes/knowledge",
    "crates/core/runtime",
    "crates/core/scheduler",
    "crates/core/state",
    "crates/tools/core-tools",
    "crates/core/tracing",
    "crates/core/vault",
]
resolver = "2"
