[workspace]
members = [
    "crates/kernel/lillux",
    "crates/daemon/ryeos-api",
    "crates/daemon/ryeos-app",
    "crates/daemon/ryeos-bundle",
    "crates/daemon/ryeos-node",
    "crates/bin/cli",
    "crates/bin/daemon",
    "crates/daemon/ryeos-ui",
    "crates/clients/base",
    "crates/clients/terminal",
    "crates/clients/web",
    "crates/runtimes/directive",
    "crates/engine/ryeos-engine",
    "crates/engine/ryeos-executor",
    "crates/runtimes/graph",
    "crates/tools/handler-bins",
    "crates/engine/ryeos-handler-protocol",
    "crates/runtimes/knowledge",
    "crates/engine/ryeos-runtime",
    "crates/state/ryeos-scheduler",
    "crates/state/ryeos-state",
    "crates/tools/core-tools",
    "crates/tools/web-tools",
    "crates/support/ryeos-tracing",
    "crates/state/ryeos-vault",
]
resolver = "2"
