[workspace]
members = [
    "crates/kernel/lillux",
    "crates/daemon/ryeos-api",
    "crates/daemon/ryeos-app",
    "crates/daemon/ryeos-bundle",
    "crates/daemon/ryeos-node",
    "crates/bin/cli",
    "crates/bin/daemon",
    "crates/daemon/ryeos-ui",
    "crates/clients/base",
    "crates/clients/terminal",
    "crates/clients/web",
    "crates/runtimes/directive-core",
    "crates/runtimes/directive",
    "crates/engine/ryeos-engine",
    "crates/engine/ryeos-executor",
    "crates/runtimes/graph",
    "crates/tools/handler-bins",
    "crates/engine/ryeos-handler-protocol",
    "crates/engine/ryeos-isolation-protocol",
    "crates/runtimes/knowledge",
    "crates/engine/ryeos-runtime",
    "crates/state/ryeos-scheduler",
    "crates/state/ryeos-state",
    "crates/tools/core-tools",
    "crates/tools/web-tools",
    "crates/tools/browser-tools",
    "crates/support/ryeos-tracing",
    "crates/state/ryeos-vault",
]
exclude = ["bundles/*/adapter"]
resolver = "2"

[workspace.package]
license = "MIT"

[profile.release]
lto = "thin"
# Keep the symbol table (debuginfo is already absent at debug=0) so a live
# process can be stack-dumped with named frames; costs a few MB per binary.
strip = "debuginfo"

[workspace.dependencies]
# Internal crates
lillux = { path = "crates/kernel/lillux" }
ryeos-api = { path = "crates/daemon/ryeos-api" }
ryeos-app = { path = "crates/daemon/ryeos-app" }
ryeos-bundle = { path = "crates/daemon/ryeos-bundle" }
ryeos-cli = { path = "crates/bin/cli" }
ryeos-client-base = { path = "crates/clients/base" }
ryeos-directive-core = { path = "crates/runtimes/directive-core" }
ryeos-engine = { path = "crates/engine/ryeos-engine" }
ryeos-executor = { path = "crates/engine/ryeos-executor" }
ryeos-handler-protocol = { path = "crates/engine/ryeos-handler-protocol" }
ryeos-isolation-protocol = { path = "crates/engine/ryeos-isolation-protocol" }
ryeos-node = { path = "crates/daemon/ryeos-node" }
ryeos-runtime = { path = "crates/engine/ryeos-runtime" }
ryeos-scheduler = { path = "crates/state/ryeos-scheduler" }
ryeos-state = { path = "crates/state/ryeos-state" }
ryeos-core-tools = { path = "crates/tools/core-tools" }
ryeos-tracing = { path = "crates/support/ryeos-tracing" }
ryeos-ui = { path = "crates/daemon/ryeos-ui" }
ryeos-vault = { path = "crates/state/ryeos-vault" }

# External crates
anyhow = "1.0.103"
arc-swap = "1.9"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", default-features = false }
base64 = "0.22"
bytes = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
cron = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "5"
dirs = "6"
ed25519-dalek = "2"
form_urlencoded = "1"
futures-util = "0.3"
glob = "0.3"
hex = "0.4"
hmac = "0.12"
hkdf = "0.12"
hostname = "0.4"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
jsonschema = { version = "0.26", default-features = false }
libc = "0.2.184"
once_cell = "1"
rand = "0.8.6"
regex = "1"
reqwest = { version = "0.12", default-features = false }
signal-hook = "0.3"
rmp-serde = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
subtle = "2"
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.12"
tokio = "1"
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"
zeroize = "1"
