[package]
name = "directive_runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "directive-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
lillux = { path = "../lillux/lillux" }
quick-xml = "0.36"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rye_runtime = { path = "../rye-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "io-util", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
