[package]
name = "graph_runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native graph walker runtime for Rye OS"

[[bin]]
name = "graph-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env"] }
lillux = { path = "../lillux/lillux" }
rand = "0.8"
regex = "1"
rye_runtime = { path = "../rye-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
