[package]
name = "lillux"
version = "0.2.1"
edition = "2021"
description = "Lillux microkernel — Execute, Memory, Identity, Time"
license = "MIT"
repository = "https://github.com/leolilley/ryeos"

[lib]
name = "lillux"
path = "src/lib.rs"

[[bin]]
name = "lillux"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core", "pem"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

