[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lilux"
version = "0.1.0"
description = "Lilux - Microkernel for RYE OS"
authors = [{name = "RYE Team"}]
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
