[package]
name = "rye-cli"
version = "0.1.0"
edition = "2021"
description = "Minimal CLI for Rye OS daemon interaction"

[[bin]]
name = "rye"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ryeos-tools = { path = "../ryeos-tools" }
