[project]
name = "rye-core"
version = "0.1.0"
description = "RYE Core - minimal bundle with core runtimes, primitives, and extractors"

dependencies = [
    "lilux",
    "pyyaml",
    "cryptography",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.entry-points."rye.bundles"]
rye-core = "rye.bundle_entrypoints:get_rye_core_bundle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the same rye module from the sibling rye/ directory
packages = ["../rye/rye"]

[tool.hatch.build]
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"../rye/rye/.ai" = "rye/.ai"
