[project]
name = "rye-mcp"
version = "0.1.0"
description = "MCP server transport for RYE OS"

dependencies = [
    "rye-os",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rye-mcp = "rye_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rye_mcp"]
