[project]
name = "rye-mcp"
version = "0.1.0"
description = "MCP server transport for RYE OS"

dependencies = [
    "rye-os",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rye-mcp = "rye_mcp.server:main"

[project.entry-points."rye.bundles"]
rye-os = "rye_mcp.bundle_entrypoints:get_rye_os_bundle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rye_mcp"]
