[package]
name = "rye_runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared runtime library for Rye OS Rust runtimes"

[lib]
name = "rye_runtime"
path = "src/lib.rs"

[features]
default = []
http-client = ["reqwest"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core", "pem"] }
lillux = { path = "../lillux/lillux" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "macros"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
