[package]
name = "rye-state"
version = "0.1.0"
edition = "2021"
description = "CAS-as-truth persistence plane for RyeOS"

[dependencies]
lillux = { path = "../lillux/lillux" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
base64 = "0.22"
ed25519-dalek = "2.1"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
