[project]
name = "rye-os"
version = "0.1.0"
description = "RYE - AI operating system running on Lilux microkernel"

dependencies = [
    "lilux",
    "pyyaml",
    "cryptography",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.entry-points."rye.bundles"]
rye-os = "rye.bundle_entrypoints:get_rye_os_bundle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rye"]

[tool.hatch.build]
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"rye/.ai" = "rye/.ai"
