[package]
name = "ryeos-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arc-swap = "1.9.1"
base64 = "0.22"
chrono = "0.4"
directories = "5"
lillux = { path = "../lillux" }
once_cell = "1"
rand = "0.8"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ryeos-engine = { path = "../ryeos-engine" }
ryeos-runtime = { path = "../ryeos-runtime" }
ryeos-scheduler = { path = "../ryeos-scheduler" }
ryeos-state = { path = "../ryeos-state" }
ryeos-tools = { path = "../ryeos-tools" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
