[project]
name = "ryeos-bare"
version = "0.1.0"
description = "RYE Bare - execution engine with no data-driven tools or bundles"

dependencies = [
    "lilux",
    "pyyaml",
    "cryptography",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the same rye module from the sibling rye/ directory
packages = ["../rye/rye"]

[tool.hatch.build]
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
    # Exclude all .ai data — bare ships no bundles
    "*.ai",
]
