[project]
name = "ryeos-cli"
version = "0.1.1"
description = "Terminal-native CLI for RYE OS — maps shell verbs to the four primitives"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Leo Lilley", email = "leo.lml.lilley@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "ryeos",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rye = "rye_cli.main:main"

[project.urls]
Homepage = "https://github.com/leolilley/ryeos"
Repository = "https://github.com/leolilley/ryeos"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rye_cli"]
