[package]
name = "ryeos-directive-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ryeos-directive-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
lillux = { path = "../lillux" }
quick-xml = "0.36"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ryeos-engine = { path = "../ryeos-engine" }
ryeos-runtime = { path = "../ryeos-runtime" }
ryeos-state = { path = "../ryeos-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "io-util", "net"] }
tracing = "0.1"
ryeos-tracing = { path = "../ryeos-tracing" }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
ryeos-tracing = { path = "../ryeos-tracing", features = ["test-harness"] }
