[package]
name = "ryeos-engine"
version = "0.1.0"
edition = "2021"
description = "Native policy engine for Rye OS — resolution, trust, planning"
license = "MIT"

[dependencies]
base64 = "0.22"
directories = "5"
jsonschema = { version = "0.26", default-features = false }
lillux = { path = "../lillux" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
regex = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
ryeos-tracing = { path = "../ryeos-tracing", features = ["test-harness"] }

