[package]
name = "ryeos-engine"
version = "0.1.0"
edition = "2021"
description = "Native policy engine for Rye OS — resolution, trust, planning"
license = "MIT"

[dependencies]
base64 = "0.22"
directories = "5"
jsonschema = { version = "0.26", default-features = false }
lillux = { path = "../lillux" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
ryeos-handler-protocol = { path = "../ryeos-handler-protocol" }
thiserror = "2"
toml = "0.8"
tracing = "0.1"

[features]
# Exposes `ryeos_engine::test_support` for downstream test crates that
# need the live HandlerRegistry / ParserDispatcher wiring against the
# core bundle (see `ryeos-engine/src/test_support.rs`).
test-support = []

[dev-dependencies]
tempfile = "3"
ryeos-tracing = { path = "../ryeos-tracing", features = ["test-harness"] }

