[package]
name = "ryeos-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", default-features = false }
chrono = "0.4"
lillux = { path = "../lillux" }
rand = "0.8"
ryeos-app = { path = "../ryeos-app" }
ryeos-engine = { path = "../ryeos-engine" }
ryeos-runtime = { path = "../ryeos-runtime" }
ryeos-state = { path = "../ryeos-state" }
ryeos-tracing = { path = "../ryeos-tracing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
