[package]
name = "ryeos-graph-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native graph walker runtime for Rye OS"

[[bin]]
name = "ryeos-graph-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
lillux = { path = "../lillux" }
rand = "0.8"
regex = "1"
ryeos-runtime = { path = "../ryeos-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
