[package]
name = "ryeos-knowledge-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal native knowledge runtime stub for Rye OS — emits frontmatter-stripped body. Future: graph-aware context composition (see docs/future/knowledge-runtime.md)."

[[bin]]
name = "ryeos-knowledge-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
lillux = { path = "../lillux" }
ryeos-runtime = { path = "../ryeos-runtime" }
ryeos-tracing = { path = "../ryeos-tracing" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
