[package]
name = "ryeos-knowledge-runtime"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Native Rust runtime for the knowledge kind. Spawned via lillux::run by ryeosd. Single-mode op dispatcher over verified knowledge graphs."

[[bin]]
name = "ryeos-knowledge-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ryeos-knowledge = { path = "../ryeos-knowledge" }
ryeos-runtime = { path = "../ryeos-runtime" }
ryeos-tracing = { path = "../ryeos-tracing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1"
