[project]
name = "ryeos-mcp"
version = "0.1.0"
description = "MCP server transport for RYE OS"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Leo Lilley", email = "leo.lml.lilley@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "ryeos",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ryeos-mcp = "rye_mcp.server:main"

[project.urls]
Homepage = "https://github.com/leolilley/ryeos"
Repository = "https://github.com/leolilley/ryeos"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rye_mcp"]
