[package]
name = "ryeos-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared runtime library for Rye OS Rust runtimes"

[lib]
name = "ryeos_runtime"
path = "src/lib.rs"

[features]
default = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
lillux = { path = "../lillux" }
regex = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "macros"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
