[package]
name = "ryeos-state"
version = "0.1.0"
edition = "2021"
description = "CAS-as-truth persistence plane for RyeOS"

[dependencies]
lillux = { path = "../lillux" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
ryeos-tracing = { path = "../ryeos-tracing", features = ["test-harness"] }
