[package]
name = "ryeos-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "ryeos_tools"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ryeos-tracing = { path = "../ryeos-tracing" }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
sha2 = "0.10"
serde_yaml = "0.9"
rmp-serde = "1"
dirs = "5"
glob = "0.3"
rand = "0.8"
toml = "0.8"

# Engine + state
ryeos-engine = { path = "../ryeos-engine" }
ryeos-state = { path = "../ryeos-state" }

# Required for verify
lillux = { path = "../lillux" }

[dev-dependencies]
tempfile = "3"

[features]
default = []

# Exposes `ryeos_tools::test_support` for downstream test crates that
# need a manifest-stable copy of the `core` bundle (eliminates the
# dev-tree manifest concurrency race documented in
# `docs/operations/dev-tree-caveats.md`).
test-support = []

# ── Operator-side sign binary ──────────────────────────────────────
# Resolves a canonical ref → file path via the engine kind registry,
# enforces the path-anchoring validator, then signs in place using
# the user signing key.
[[bin]]
name = "rye-sign"
path = "src/bin/rye-sign.rs"

# ── Publisher-side bundle manifest tool ────────────────────────────
# Rebuilds CAS manifests and batch-signs bundle items.
# Not part of the rye CLI verb plane.
[[bin]]
name = "rye-bundle-tool"
path = "src/bin/rye-bundle-tool.rs"

# ── Unified inspection binary ──────────────────────────────────────
# Subcommands: fetch, verify, identity. Invoked by tool YAMLs via
# `bin:rye-inspect <subcommand>`.
[[bin]]
name = "rye-inspect"
path = "src/bin/rye-inspect.rs"

[[example]]
name = "bootstrap_sign_core_kind_schemas"
path = "examples/bootstrap_sign_core_kind_schemas.rs"
