[project]
name = "ryeos"
version = "0.1.0"
description = "RYE - AI operating system running on Lillux microkernel"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Leo Lilley", email = "leo.lml.lilley@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lillux",
    "pyyaml",
    "cryptography",
    "packaging>=21.0",
]

[project.optional-dependencies]
web = ["ryeos-web"]
code = ["ryeos-code"]
all = ["ryeos-web", "ryeos-code"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/leolilley/ryeos"
Repository = "https://github.com/leolilley/ryeos"

[project.entry-points."rye.bundles"]
ryeos = "rye.bundle_entrypoints:get_ryeos_bundle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rye"]

[tool.hatch.build]
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"rye/.ai" = "rye/.ai"
