[project]
name = "ryeos-engine"
version = "0.1.6"
description = "RYE Engine — execution engine for Rye OS (resolver, executor, signing)"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Leo Lilley", email = "leo.lml.lilley@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lillux",
    "pyyaml",
    "cryptography",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/leolilley/ryeos"
Repository = "https://github.com/leolilley/ryeos"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rye"]

[tool.hatch.build]
exclude = [
    ".venv",
    "__pycache__",
    "*.pyc",
    "*.ai",
]
